# bloom-art

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/backend/: config.py  settings.py  urls.py
backend/base/: admin.py  enums.py  models.py  redis_manager.py  serializers.py
backend/base/migrations/: 0001_initial.py  0002_alter_perfume_options.py  0002_perfume_sex_alter_perfume_currency_and_more.py  0003_delete_perfume.py
backend/metrics/: metrics.py  middleware.py  urls.py  views.py
backend/nova/: apps.py  client.py  enums.py  models.py  repository.py  serializers.py  service.py  urls.py  util.py  views.py
backend/nova/migrations/: 0001_initial.py  0002_alter_novaorder_new_address_and_more.py  0003_rename_cargo_type_novaorder_cargotype_and_more.py  0004_rename_order_novaorder_orderid.py
backend/order/: enums.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
backend/order/migrations/: 0001_initial.py  0002_alter_order_payment.py  0003_rename_created_at_order_createdat_and_more.py  0004_rename_deliverycompany_order_deliverycompanyid.py  0005_rename_order_orderitem_orderid.py
backend/perfume/: admin.py  enums.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
backend/perfume/migrations/: 0001_initial.py  0002_alter_perfume_currency_alter_perfume_volume.py
backend/scripts/: db.py
backend/templates/registration/: login.html
backend/utils/: logger.py  service.py  validation.py
backend/utils/client/: __init__.py  client.py  http.py  json.py
backend/utils/repository/: __init__.py  dj.py  repository.py
bloom_art/: manage.py
bloom_art/bloom_art/: asgi.py  config.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  Dockerfile  package.json
frontend/.next/types/: routes.d.ts  validator.ts
frontend/i18n/: request.ts
frontend/messages/: en.json  uk.json
frontend/src/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/context/: GlobalContext.tsx  HomeContext.tsx  NavbarContext.tsx  OrderContext.tsx
frontend/src/i18n/: navigation.ts  routing.ts
frontend/src/lib/: api.ts  helpers.ts  img.ts  validation.ts
frontend/src/messages/: en.json  uk.json
frontend/src/styles/: globals.css
frontend/src/types/: home.ts  (+1 more)
frontend/tests/: playwright.config.js
helm/: application-umbrella-chart-1.0.0.tgz  ingress-chart-1.0.0.tgz  monitoring-chart-1.0.0.tgz  tls-chart-1.0.0.tgz
helm/application/: Chart.yaml  values.yaml
helm/ingress/: Chart.yaml  values.yaml
helm/monitoring/: values.yaml
helm/tls/: Chart.yaml
nginx/: nginx.conf
nginx/sites/: backend.conf  frontend.conf  gzip.conf  limit.conf
(+141 files in other folders)
